erDiagram
    ETL_BATCH_RUNS ||--o{ DATA_QUALITY_ISSUES : records
    ETL_BATCH_RUNS ||--o{ RAW_SOURCE_FILES : ingests
    RAW_SOURCE_FILES ||--o{ RAW_SOURCE_RECORDS : contains

    DIM_SUPPLIERS ||--o{ SUPPLIER_PRODUCTS : supplies
    DIM_PRODUCTS ||--o{ SUPPLIER_PRODUCTS : sourced_as

    DIM_SUPPLIERS ||--o{ FACT_PURCHASE_ORDERS : receives
    DIM_PRODUCTS ||--o{ FACT_PURCHASE_ORDERS : ordered
    DIM_LOCATIONS ||--o{ FACT_CUSTOMER_ORDERS : customer_location
    DIM_PRODUCTS ||--o{ FACT_CUSTOMER_ORDERS : ordered

    DIM_PRODUCTS ||--o{ FACT_SALES_DEMAND : demanded
    DIM_LOCATIONS ||--o{ FACT_SALES_DEMAND : occurs_at
    DIM_PRODUCTS ||--o{ FACT_INVENTORY_SNAPSHOTS : stocked
    DIM_LOCATIONS ||--o{ FACT_INVENTORY_SNAPSHOTS : stored_at

    DIM_CARRIERS ||--o{ FACT_SHIPMENTS : transports
    DIM_SUPPLIERS ||--o{ FACT_SHIPMENTS : ships_from_supplier
    DIM_PRODUCTS ||--o{ FACT_SHIPMENTS : moves
    DIM_LOCATIONS ||--o{ FACT_SHIPMENTS : source
    DIM_LOCATIONS ||--o{ FACT_SHIPMENTS : destination
    FACT_PURCHASE_ORDERS ||--o{ FACT_SHIPMENTS : fulfilled_by
    FACT_CUSTOMER_ORDERS ||--o{ FACT_SHIPMENTS : delivered_by

    MODEL_REGISTRY ||--o{ DEMAND_FORECASTS : generates
    MODEL_REGISTRY ||--o{ SHIPMENT_DELAY_PREDICTIONS : generates
    MODEL_REGISTRY ||--o{ SUPPLIER_PERFORMANCE_SCORES : generates
    MODEL_REGISTRY ||--o{ INVENTORY_RECOMMENDATIONS : generates

    DIM_PRODUCTS ||--o{ DEMAND_FORECASTS : forecasted
    DIM_LOCATIONS ||--o{ DEMAND_FORECASTS : forecasted_at
    FACT_SHIPMENTS ||--o{ SHIPMENT_DELAY_PREDICTIONS : predicted
    DIM_SUPPLIERS ||--o{ SUPPLIER_PERFORMANCE_SCORES : scored
    DIM_PRODUCTS ||--o{ INVENTORY_RECOMMENDATIONS : recommended
    DIM_LOCATIONS ||--o{ INVENTORY_RECOMMENDATIONS : recommended_at

    INVENTORY_RECOMMENDATIONS ||--o{ BUSINESS_RECOMMENDATIONS : promotes
    DIM_SUPPLIERS ||--o{ BUSINESS_RECOMMENDATIONS : supplier_action
    FACT_SHIPMENTS ||--o{ BUSINESS_RECOMMENDATIONS : logistics_action
    DIM_PRODUCTS ||--o{ BUSINESS_RECOMMENDATIONS : product_action
    DIM_LOCATIONS ||--o{ BUSINESS_RECOMMENDATIONS : location_action
